--- a/assets/SASS/_enrollPage.scss
+++ b/assets/SASS/_enrollPage.scss
@@ -1,116 +1,9 @@
 .enroll-header {
   background: url("../images/enroll-bg.png") no-repeat !important;
   width: 100%;
-  height:auto;
-  .navbar-default {
-    margin-bottom:0;
-    background-color: transparent !important;
-    border-color: transparent;
-  }
-  .navbar-collapse {
-    width: 100%;
-    padding: 35px 0 0 35px;
-    font-size:15px;
-    position: relative;
-    top: 30px;
-    left: 15px;
-    ul li a{
-      color: $color-white;
-    }
-  }
-  .clock {
-    display: inline-block;
-    width: 21%;
-    margin: -28px 0 0;
-    img{
-      width: 15%;
-      float: left;
-      margin: 0;
-    }
-    p{
-      width: 79%;
-      margin: 0 !important;
-      display: inline-block;
-      float: right;
-      font-size: 11px;
-      color: $color-white;
-    }
-  }
-  .navbar-nav{
-    color:white;
-    margin-left:35px;
-  }
-  .navbar-nav > li > a {
-    &:hover{
-      color: $color-white;
-      border-bottom: 2px solid $color-white;
-    }
-  }
-  .main-heading{
-    text-align:center;
-    font-family:$font-style;
-    margin: 0 !important;
-
-      h1{
-        font-size: 60px;
-        color: $color-white;
-        font-family: $font-style;
-        font-weight: 600;
-        letter-spacing: 5px;
-        text-transform: uppercase;
-        padding: 60px 0 90px 0;
-      }
-    .container{
-      margin-bottom:0 !important;
-    }
-
-
-    .special-development-icons{
-      text-align: center;
-      display: none;
-      img{
-        height: 40px;
-      }
-      p {
-        font-size: 12px;
-        font-family: 'Raleway Bold', sans-serif;
-        font-weight:600;
-        margin-top: 15px;
-        color: $color-white;
-      }
-      .front-end-development{
-        margin-left: 20%;
-      }
-      .js-dev{
-        margin-left: -80px;
-      }
-    }
-    .btn{
-      width: 13%;
-      color: #4c667a;
-      font-family: 'Raleway', sans-serif;
-      font-weight:600;
-      border-radius: 0 !important;
-      margin-top: 40px;
-      box-shadow: 0 10px 30px #476b91;
-      padding: 5px;
-      display: none;
-    }
-  }
-
-  .navbar-toggle{
-    margin-top:50px !important;
-  }
-  .logo-top{
-    padding: 0 0 0 50px;
-  }
-  .navbar-collapse{
-    border:0;
-    padding:0 !important;
-  }
+  @extend .header-bg;
 }
 .about-us{
-
   .form-transform-marginControl{
     width: 50%;
     margin-top:50px;
@@ -132,17 +25,16 @@
       width:100%;
       border-radius: 0 !important;
       font-family: $font-style;
-      font-size:14px;
-      font-weight:700;
+      font-size: 14px;
+      font-weight: 700;
       color: $color-white;
-      margin-top:25px;
+      margin-top: 25px;
     }
   }
   .academy-chef{
-    height:450px !important;
+    height: 450px !important;
     margin-left: 200px;
   }
-
 }
 
 @media(min-width: 992px) and (max-width: 1199px){
@@ -153,14 +45,14 @@
       margin-bottom: 55px !important;
       .container-fluid{
         background: #000;
-
+        height: 100px;
       }
       .logo-top {
         padding: 0 !important;
       }
       .navbar-nav {
         margin: 0;
-        padding: 25px 0 10px 150px;
+        padding: 10px 0 0 250px !important;
       }
       .clock {
         display: none;
@@ -173,19 +65,17 @@
     }
     .navbar-collapse {
       position: relative;
-      top: 0;
+      top: -40px !important;
+      left: 0 !important;
     }
     .main-heading {
       margin: 15px 0 !important;
-      h1 {
-        font-size: 30px !important;
+      h1{
+        font-size: 50px !important;
         margin-bottom: 15px !important;
       }
-      .special-development-icons{
-        display: none;
-      }
-      .btn {
-        width:25%;
+      .btn{
+        width:20% !important;
         font-size: 18px;
         font-weight: 600;
         margin-top:20px;
@@ -194,25 +84,36 @@
         box-shadow: 0 4px 25px darkslategrey;
         color: #4c667a !important;
         background-color: $color-white !important;
-
       }
     }
   }
   .about-us{
-    .container{
-      margin-bottom: 0 !important;
-      margin-top: 0 !important;
-      .icons{
-        width: 4% !important;
+    .md-screen{
+      padding-left: 100px !important;
+      .form-transform-marginControl{
+        margin-top: 10px !important;
+        margin-left: 25px !important;
+        .icons{
+          width: 5% !important;
+          top: 28px !important;
+          left: 8px !important;
+          margin:0 !important;
+        }
+        .form-transform {
+          width: 100%;
+        }
+        button{
+          width: 100% !important;
+        }
       }
-      .col-md-6{
-      margin-left:0 !important;
+      .col-sm-6{
+        margin-left: 0 !important;
         .academy-chef {
           margin-top: 25px !important;
-          margin-left:0 !important;
+          margin-left: 50px !important;
           height: 400px !important;
         }
-    }
+      }
     }
   }
   .third-div {
@@ -241,6 +142,7 @@
       }
       .navbar-nav {
         margin: 0;
+        padding: 10px 0 5px 60px !important;
       }
       .clock {
         display: none;
@@ -257,14 +159,11 @@
     .main-heading {
       margin: 15px 0 !important;
       h1 {
-        font-size: 30px !important;
+        font-size: 40px !important;
         margin-bottom: 15px !important;
       }
-      .special-development-icons{
-        display: none;
-      }
       .btn {
-        width:55%;
+        width:21% !important;
         font-size: 18px;
         font-weight: 600;
         margin-top:20px;
@@ -273,34 +172,36 @@
         box-shadow: 0 4px 25px darkslategrey;
         color: #4c667a !important;
         background-color: $color-white !important;
-
       }
     }
   }
-  .about-us{
-    .form-transform-marginContol{
-      margin-top:30px !important;
-      margin-left:0 !important;
-      .icons{
-        width:6% !important;
-        top: 28px !important;
-        left:10px !important;
-        margin:0 !important;
+  .about-us {
+    .md-screen {
+      padding-left: 100px !important;
+      .form-transform-marginControl {
+        margin-top: 15px !important;
+        margin-left: 25px !important;
+        .icons {
+          width: 7% !important;
+          top: 28px !important;
+          left: 8px !important;
+          margin: 0 !important;
+        }
+        .form-transform {
+          width: 100%;
+        }
+        button {
+          width: 100% !important;
+        }
       }
-      .form-transform {
-        width: 100%;
+      .col-sm-6 {
+        margin-left: 0 !important;
+        .academy-chef {
+          margin-top: 25px !important;
+          margin-left: 0 !important;
+          height: 400px !important;
+        }
       }
-      button{
-        width: 100% !important;
-      }
-    }
-    .col-sm-6{
-      margin-left: 0 !important;
-      .academy-chef {
-      margin-top: 25px !important;
-      margin-left:0 !important;
-      height: 400px !important;
-     }
     }
   }
 
@@ -333,11 +234,8 @@
     .main-heading {
       margin: 15px 0 !important;
       h1 {
-        font-size: 30px !important;
+        font-size: 28px !important;
         margin-bottom: 15px !important;
-      }
-      .special-development-icons{
-        display: none;
       }
       .btn {
         width:55%;
@@ -354,25 +252,25 @@
     }
   }
   .about-us {
-      .form-transform-marginControl {
-        width: auto !important;
-        margin-top: 0 !important;
-        .icons {
-          width: 8% !important;
-        }
-        .form-transform {
-          font-size: 13px !important;
-        }
-        button {
-          width: 100% !important;
-          font-size: 13px !important;
-        }
+    .form-transform-marginControl {
+      width: auto !important;
+      margin-top: 0 !important;
+      .icons {
+        width: 8% !important;
       }
-      .academy-chef {
-        margin-top: 25px !important;
-        margin-left: 0 !important;
-        height: 200px !important;
+      .form-transform {
+        font-size: 13px !important;
       }
+      button {
+        width: 100% !important;
+        font-size: 13px !important;
+      }
+    }
+    .academy-chef {
+      margin-top: 25px !important;
+      margin-left: 75px !important;
+      height: 200px !important;
+    }
 
   }
 }
