--- a/assets/SASS/main.css
+++ b/assets/SASS/main.css
@@ -7845,7 +7845,7 @@ button.close {
     font-size: 18px !important; }
 
   .enroll-background .btn {
-    width: 46%; } }
+    width: 95%; } }
 @media (min-width: 768px) and (max-width: 991px) {
   .about-background-image .second-div .front-end-development {
     margin-left: 0 !important; }
@@ -8602,8 +8602,7 @@ button.close {
     font-size: 16px; } }
 .hybrid-header-bg {
   background: url("../images/HADS-background.png") no-repeat;
-  width: 100%;
-  height: 460px; }
+  width: 100%; }
 
 .fifth-div .displayes .sass-block {
   background-color: rgba(204, 51, 99, 0.9); }
@@ -8649,6 +8648,8 @@ button.close {
 .about-background-image .second-div .basic-info {
   font-size: 20px;
   color: #333333; }
+  .about-background-image .second-div .basic-info p {
+    margin-bottom: 0 !important; }
 
 .why-angular {
   background-image: url("../images/why-laguage-bg.jpg");
@@ -8665,32 +8666,17 @@ button.close {
     .why-angular .text-center p {
       color: #dee2e5;
       font-family: 'Raleway', sans-serif;
-      padding-top: 25px; }
+      padding-top: 10px; }
 
 @media (min-width: 992px) and (max-width: 1199px) {
-  .angular-header-bg .container-fluid {
-    background: #000;
-    padding-bottom: 50px; }
-    .angular-header-bg .container-fluid .logo-top {
-      padding: 0 !important; }
-    .angular-header-bg .container-fluid .navbar-collapse {
-      padding: 0 !important; }
-    .angular-header-bg .container-fluid .clock {
-      display: none; }
   .angular-header-bg .main-heading {
     margin: 70px 0 0 0; }
     .angular-header-bg .main-heading h1 {
       font-size: 50px !important; }
-    .angular-header-bg .main-heading .btn {
-      display: inline-block;
-      font-family: Raleway, sans-serif;
-      font-weight: 600;
-      margin-top: 20px;
-      width: 20%; }
 
   .about-background-image .second-div .angular-logo {
     height: 85px;
-    margin-top: 0 !important; }
+    margin-top: 30px; }
   .about-background-image .second-div h4 {
     font-size: 30px; }
   .about-background-image .second-div p {
@@ -8703,30 +8689,18 @@ button.close {
     font-size: 14px;
     padding-top: 0 !important; } }
 @media (min-width: 768px) and (max-width: 991px) {
-  .angular-header-bg .container-fluid {
-    background: #000; }
-    .angular-header-bg .container-fluid .logo-top {
-      padding: 0 !important; }
-    .angular-header-bg .container-fluid .navbar-collapse {
-      padding: 0 0 35px 0 !important; }
-    .angular-header-bg .container-fluid .clock {
-      display: none; }
   .angular-header-bg .main-heading {
     margin: 60px 0 0 0; }
     .angular-header-bg .main-heading h1 {
       font-size: 45px !important; }
-    .angular-header-bg .main-heading .btn {
-      display: inline-block;
-      font-family: Raleway, sans-serif;
-      font-weight: 600;
-      margin-top: 15px;
-      width: 25%; }
 
   .about-background-image .second-div .angular-logo {
     height: 75px;
-    margin-top: 25px; }
+    margin-top: 12px;
+    margin-bottom: 20px !important; }
   .about-background-image .second-div h4 {
-    font-size: 30px; }
+    font-size: 30px;
+    margin-bottom: 15px !important; }
   .about-background-image .second-div .basic-info {
     margin: 0 0 20px 0 !important;
     font-size: 16px; }
